--- a/src/app/surf-event/surf-event/competition/competition.component.html
+++ b/src/app/surf-event/surf-event/competition/competition.component.html
@@ -1,4 +1,3 @@
-<h1>Competition</h1>
-<div class="dropzone">
+<div class="competition-container">
     <rs-round *ngFor="let round of rounds" [riders]="round.riders" [roundNumber]="round.id"></rs-round>
 </div>
