--- a/src/app/surf-event/surf-event/competition/round/round.component.scss
+++ b/src/app/surf-event/surf-event/competition/round/round.component.scss
@@ -1,23 +1,41 @@
+.container{
+    padding: 1rem;
+    min-width: 25vw;
+}
+
 .round{
     display: flex;
     flex-direction: column;
-    width: 100%;
-    padding: 0.2rem;
+
+    &__header{
+        align-self: center;
+        padding: 1rem;
+    }
+
+    &__container{
+        display: flex;
+        flex-direction: row;
+        padding: 1rem;
+
+        & > *{
+            width: 50%;
+        }
+
+        &__element{
+            display: flex;
+            flex-direction: column;
+            padding: 1rem;
+        }
+    }
 
     &__riders{
-        padding: 0.2rem;
+        padding: 0.5rem;
         background: lightblue;
 
         &__single-rider{
-            padding: 0.2rem;
+            padding: 0.5rem;
             background: deepskyblue;
+            width: 100%;
         }
-
-    }
-
-    &__heats{
-
-        padding: 0.2rem;
-        background: lightcyan;
     }
 }
