--- a/src/app/surf-event/surf-event/competition/round/round.component.scss
+++ b/src/app/surf-event/surf-event/competition/round/round.component.scss
@@ -16,15 +16,13 @@
         display: flex;
         flex-direction: row;
         padding: 1rem;
-
-        & > *{
-            width: 50%;
-        }
+        justify-content: space-between;
 
         &__element{
             display: flex;
             flex-direction: column;
             padding: 1rem;
+            width: 50%;
         }
     }
 
