Removed drop-zone

--- a/src/app/surf-event/surf-event/surf-event.component.html
+++ b/src/app/surf-event/surf-event/surf-event.component.html
@@ -42,9 +42,9 @@
         </div>
         <div class="event__divisions__riders">
             <h2>Riders</h2>
-            <div *ngFor="let division of surfEvent.competitions">
-                <rs-rider-card *ngFor="let rider of division.riders | slice:0:1" [rider]="rider"></rs-rider-card>
-            </div>
+<!--            <div *ngFor="let division of surfEvent.competitions">-->
+<!--                <rs-rider-card *ngFor="let rider of division.riders | slice:0:1" [rider]="rider"></rs-rider-card>-->
+<!--            </div>-->
             <!--            <div *ngFor="let division of surfEvent.competitions" class="event__divisions__riders">-->
             <!--                <rs-carousel [index]="0" [auto]="false">-->
             <!--                    <ng-container *ngFor="let rider of division.riders">-->
