improving styling wip

--- a/src/app/surf-event/surf-event/competition/round/round.component.html
+++ b/src/app/surf-event/surf-event/competition/round/round.component.html
@@ -4,8 +4,9 @@
             <h1>Round {{roundNumber}}</h1>
         </div>
         <div class="round__container">
-            <div class="round__container__element">
-                <h2 *ngIf="riders.length > 0">Unassigned riders</h2>
+            <div class="round__container__element" *ngIf="riders.length > 0">
+                <h2>Unassigned riders</h2>
+                <hr>
                 <div cdkDropList [cdkDropListData]="riders" class="round__riders"
                      (cdkDropListDropped)="drop($event)" id="unassignedRiders">
                     <div class="round__riders__single-rider" *ngFor="let rider of riders" cdkDrag>{{rider}}</div>
@@ -13,15 +14,18 @@
             </div>
             <div class="round__container__element">
                 <h2>Heats</h2>
-                <ng-container *ngFor="let heat of heats">
-                    <h3>Heat {{heat.id}}</h3>
-                    <div cdkDropList [cdkDropListData]="heat.riders" class="round__riders"
-                         (cdkDropListDropped)="drop($event)">
-                        <div class="round__riders__single-rider" *ngFor="let rider of heat.riders"
-                             cdkDrag>{{rider}}</div>
-                        <div class="round__riders__single-rider" *ngIf="!heat.riders.length">Placeholder</div>
+                <hr>
+                <div *ngFor="let heat of heats" class="round__heat">
+                        <h4>Heat {{heat.id}}</h4>
+                        <div cdkDropList [cdkDropListData]="heat.riders" class="round__riders"
+                             (cdkDropListDropped)="drop($event)">
+                            <div class="round__riders__single-rider" *ngFor="let rider of heat.riders"
+                                 cdkDrag>{{rider}}</div>
+                            <div class="round__riders__single-rider--placeholder" *ngIf="!heat.riders.length">
+                                Placeholder
+                            </div>
                     </div>
-                </ng-container>
+                </div>
             </div>
         </div>
     </mat-card>
