--- a/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.html
+++ b/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.html
@@ -1,15 +1,26 @@
 <mat-card class="rider__card">
     <mat-spinner *ngIf="!rider"></mat-spinner>
     <mat-card-header class="rider__card__header" *ngIf="rider">
+
         <div mat-card-avatar
              class="rider__card__header__image"
-             [style.background-image]="'url(' + rider.profilePicture + ')'"></div>
-        <mat-card-title> {{rider.firstName}} {{rider.lastName}}</mat-card-title>
-        <mat-card-content [ngSwitch]="resultType">
-            <div *ngSwitchCase="'default'">Default</div>
-            <div *ngSwitchCase="'assigned'" [ngStyle]="{'background-color': riderColorIndex | riderColor}">Assigned</div>
-            <div *ngSwitchCase="'locked'">Locked</div>
-            <div *ngSwitchCase="'finished'">Finished</div>
-        </mat-card-content>
+             [style.background-image]="'url(' + rider.profilePicture + ')'"
+             [ngStyle]="{'border-color': riderColorIndex | riderColor}"
+        ></div>
+        <mat-card-title class="rider__card__name"> {{rider.firstName}} {{rider.lastName}}</mat-card-title>
+        <div [ngSwitch]="resultType">
+            <div *ngSwitchCase="'default'" class="rider__card__type">
+                <mat-icon aria-hidden="false" aria-label="default" class="rider__card__icon">hourglass_empty</mat-icon>
+            </div>
+            <div *ngSwitchCase="'assigned'" class="rider__card__type">
+                <mat-icon aria-hidden="false" aria-label="assigned" class="rider__card__icon">thumb_up_alt</mat-icon>
+            </div>
+            <div *ngSwitchCase="'locked'" class="rider__card__type">
+                <mat-icon aria-hidden="false" aria-label="locked" class="rider__card__icon">lock</mat-icon>
+            </div>
+            <div *ngSwitchCase="'finished'" class="rider__card__type">
+                <mat-icon aria-hidden="false" aria-label="finished" class="rider__card__icon">verified</mat-icon>
+            </div>
+        </div>
     </mat-card-header>
 </mat-card>
