--- a/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.scss
+++ b/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.scss
@@ -1,3 +1,4 @@
+@import "../../../../../../assets/scss/_variables";
 .rider__card {
 
     &:hover {
@@ -10,10 +11,31 @@
     }
 
     &__header {
+
+        align-items: center;
+        justify-content: space-evenly;
+
         &__image {
             background-position: center;
             background-size: contain;
             transition: .5s all;
+            border: 3px solid;
         }
+    }
+
+    &__name {
+        font-size: 1rem;
+        font-weight: normal;
+        margin: 0;
+    }
+
+    &__icon {
+        margin: 0;
+    }
+
+    &__type {
+
+        color: $color-primary;
+
     }
 }
