--- a/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.scss
+++ b/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.scss
@@ -1,5 +1,7 @@
 @import "../../../../../../assets/scss/_variables";
+
 .rider__card {
+    display: flex;
 
     &:hover {
         transform: scale(1.01);
@@ -11,9 +13,7 @@
     }
 
     &__header {
-
-        align-items: center;
-        justify-content: space-evenly;
+        flex: 90%;
 
         &__image {
             background-position: center;
@@ -22,6 +22,12 @@
             border: 3px solid;
         }
     }
+
+    &__content {
+        flex: 10%;
+        text-align: right;
+    }
+
 
     &__name {
         font-size: 1rem;
@@ -34,8 +40,6 @@
     }
 
     &__type {
-
         color: $color-primary;
-
     }
 }
