--- a/src/app/surf-event/surf-event/competition/round/round.component.html
+++ b/src/app/surf-event/surf-event/competition/round/round.component.html
@@ -18,16 +18,21 @@
                 <h2>Heats</h2>
                 <hr>
                 <div *ngFor="let heat of heats" class="round__heat">
-                        <h4>Heat {{heat.id}}</h4>
-                        <div cdkDropList [cdkDropListData]="heat.riders" class="round__riders"
-                             (cdkDropListDropped)="drop($event)">
-                            <div class="round__riders__single-rider" *ngFor="let rider of heat.riders; let i = index"
-                                 cdkDrag>
-                                <rs-rider-result [riderId]="rider" resultType="assigned" [riderColorIndex]=i></rs-rider-result>
-                            </div>
-                            <div class="round__riders__single-rider--placeholder" *ngIf="!heat.riders.length">
-                                Placeholder
-                            </div>
+                    <div class="round__heat__header">
+                        <div class="round__heat__header-title">Heat {{heat.id}}</div>
+                        <div class="round__heat__header-counter">{{ heat.riders.length }} / {{ heatSize }}</div>
+                    </div>
+
+                    <div cdkDropList [cdkDropListData]="heat.riders" class="round__riders"
+                         (cdkDropListDropped)="drop($event)">
+                        <div class="round__riders__single-rider" *ngFor="let rider of heat.riders; let i = index"
+                             cdkDrag>
+                            <rs-rider-result [riderId]="rider" resultType="assigned"
+                                             [riderColorIndex]=i></rs-rider-result>
+                        </div>
+                        <div class="round__riders__single-rider--placeholder" *ngIf="!heat.riders.length">
+                            Drop riders here
+                        </div>
                     </div>
                 </div>
             </div>
