hotfix(carousel): fix swipe ends with down or up causes carousel to not snap

--- a/src/app/shared/carousel/carousel.component.html
+++ b/src/app/shared/carousel/carousel.component.html
@@ -3,7 +3,7 @@
         (panleft)="onPan($event)"
         (panright)="onPan($event)"
         (panend)="onPanEnd($event)"
-        (pancancel)="onPanEnd($event)"
+        (pancancel)="onPanCancel($event)"
         [style.touch-action]="'pan-y'"
     >
         <li *ngFor="let element of elements" #carouselListItem
