--- a/src/app/surf-event/surf-event/competition/competition.component.scss
+++ b/src/app/surf-event/surf-event/competition/competition.component.scss
@@ -1,6 +1,13 @@
+@import "../../../../assets/scss/_responsive";
+
 .competition-container {
     display: flex;
     padding: 2rem;
     overflow-x: scroll;
     height: calc(100vh - 64px);
+
+    @include respond(small) {
+        flex-direction: column;
+        overflow-x: hidden;
+    }
 }
