--- a/src/app/surf-event/surf-event/competition/round/round.component.scss
+++ b/src/app/surf-event/surf-event/competition/round/round.component.scss
@@ -1,18 +1,30 @@
 @import "../../../../../assets/scss/_mixins";
 @import "../../../../../assets/scss/_variables";
+@import "../../../../../assets/scss/_responsive";
 
 .container {
     padding: 0.5rem;
     min-width: 25vw;
+
+    @include respond(small) {
+        min-width: auto;
+    }
 }
 
 .round {
     display: flex;
     flex-direction: column;
+    width: 100%;
 
     &__header {
-        align-self: center;
         padding: 0.5rem;
+        width: 100%;
+        text-align: center;
+
+        &-buttons {
+            display: flex;
+            justify-content: space-evenly;
+        }
     }
 
     &__container {
@@ -41,14 +53,14 @@
         &__header {
             display: flex;
             flex-direction: row;
-            margin: 1rem 1rem 0 1rem;
+            justify-content: space-between;
+            margin: 1rem .5rem;
+
 
             &-title {
-                flex: 50%;
             }
 
             &-counter {
-                flex: 50%;
                 text-align: right;
                 color: $color-grey-dark-1;
                 @include text-small;
