--- a/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.scss
+++ b/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.scss
@@ -2,6 +2,7 @@
 
 .rider__card {
     display: flex;
+    justify-content: space-between;
 
     &:hover {
         transform: scale(1.01);
@@ -13,7 +14,6 @@
     }
 
     &__header {
-        flex: 90%;
 
         &__image {
             background-position: center;
@@ -24,8 +24,6 @@
     }
 
     &__content {
-        flex: 10%;
-        text-align: right;
     }
 
 
@@ -37,6 +35,16 @@
 
     &__icon {
         margin: 0;
+    }
+
+    &__input {
+        width: 40px;
+        height: 40px;
+        border: none;
+        border-bottom: 1px solid $color-primary;
+        text-align: right;
+        font-size: 1.5rem;
+        color: $color-primary
     }
 
     &__type {
