--- a/src/app/surf-event/surf-event/competition/round/round.component.scss
+++ b/src/app/surf-event/surf-event/competition/round/round.component.scss
@@ -8,6 +8,7 @@
 
     @include respond(small) {
         min-width: auto;
+        padding: .1rem;
     }
 }
 
@@ -24,6 +25,15 @@
         &-buttons {
             display: flex;
             justify-content: space-evenly;
+
+            @include respond(small) {
+                flex-direction: column;
+
+                & > * {
+                    margin-top: 1rem;
+                }
+            }
+
         }
     }
 
@@ -32,6 +42,11 @@
         flex-direction: row;
         padding: 1rem;
         flex-wrap: nowrap;
+
+        @include respond(small) {
+            flex-direction: column;
+            padding: 0;
+        }
 
 
         &__element {
@@ -49,6 +64,10 @@
     &__heat {
         margin: .5rem;
         border: 1px solid $color-primary;
+
+        @include respond(small) {
+            margin: 0;
+        }
 
         &__header {
             display: flex;
@@ -72,10 +91,16 @@
     &__riders {
         padding: 1rem;
 
+        @include respond(small) {
+            padding: 0;
+        }
+
+
         &__single-rider {
             margin: 0.5rem 0;
             width: 100%;
             cursor: pointer;
+
 
             &--placeholder {
                 text-align: center;
@@ -84,7 +109,13 @@
                 padding: 1rem;
                 border: 1px dashed $color-primary;
                 border-radius: 10px;
-                min-width: 250px;
+
+                @include respond(small) {
+                    margin: .5rem auto;
+                    min-width: 95%;
+                    max-width: 95%;
+
+                }
             }
         }
     }
