--- a/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.scss
+++ b/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.scss
@@ -42,7 +42,7 @@
         height: 40px;
         border: none;
         border-bottom: 1px solid $color-primary;
-        text-align: right;
+        text-align: center;
         font-size: 1.5rem;
         color: $color-primary
     }
@@ -50,4 +50,17 @@
     &__type {
         color: $color-primary;
     }
+}
+
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
 }
