minir improvements with cursor effect

--- a/src/app/surf-event/surf-event/competition/round/round.component.html
+++ b/src/app/surf-event/surf-event/competition/round/round.component.html
@@ -52,7 +52,7 @@
                                              [resultType]="getHeatStatus(heat)"
                                              [riderColorIndex]=riderIndex
                                              [disableInput]="heatsFinished[heatIndex]"
-                                             (resultEntry)="onResultentry($event)"
+                                             (resultEntry)="onResultEntry($event)"
                             ></rs-rider-result>
                         </div>
                         <div class="round__riders__single-rider--placeholder" *ngIf="!heat.riders.length">
