--- a/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.scss
+++ b/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.scss
@@ -55,7 +55,11 @@
         border-bottom: 1px solid $color-primary;
         text-align: center;
         font-size: 1.5rem;
-        color: $color-primary
+        color: $color-primary;
+
+        &:disabled {
+            cursor: not-allowed;
+        }
     }
 
     &__type {
