Make favoriteRiderSubscription optional to avoid unsubscribe-error when using the Riders table filter after paginating. Add outline: none to clickable elements to avoid ugly blue border in Safari

--- a/src/app/home/event-card/event-card.component.scss
+++ b/src/app/home/event-card/event-card.component.scss
@@ -7,6 +7,7 @@
     transition: all .3s;
     cursor: pointer;
     max-width: 100%;
+    outline: none;
 
     &:hover {
         transform: scale(1.01);
@@ -39,5 +40,6 @@
 
     mat-chip{
         cursor: pointer;
+        outline: none;
     }
 }
