--- a/src/app/shared/rider-card/rider-card.component.scss
+++ b/src/app/shared/rider-card/rider-card.component.scss
@@ -2,6 +2,7 @@
     cursor: pointer;
     margin-bottom: .5rem;
     display: flex;
+    outline: none;
 
     &:hover {
         transform: scale(1.01);
