--- a/src/app/core/header/navigation/navigation.component.scss
+++ b/src/app/core/header/navigation/navigation.component.scss
@@ -20,6 +20,7 @@
         box-shadow: 0 1rem 3rem rgba($color-black, 0.1);
         text-align: center;
         cursor: pointer;
+        outline: none;
 
         @include respond(small) {
             display: none;
