--- a/src/app/riders/riders.component.scss
+++ b/src/app/riders/riders.component.scss
@@ -16,6 +16,7 @@
         border-radius: 4px;
         border: solid 1px rgba(0, 0, 0, .12);
         cursor: pointer;
+        outline: none;
         transition: all 0.2s;
 
         &:hover {
@@ -136,6 +137,7 @@
             & tr {
                 transition: all .3s;
                 cursor: pointer;
+                outline: none;
             }
 
             & tr:hover {
