--- a/src/app/shared/carousel/carousel.component.scss
+++ b/src/app/shared/carousel/carousel.component.scss
@@ -9,6 +9,7 @@
         position: absolute;
         background: transparent;
         cursor: pointer;
+        outline: none;
         border: none;
         height: 100%;
         width: 20%;
