--- a/src/app/surf-event/surf-event/competition/round/round.component.html
+++ b/src/app/surf-event/surf-event/competition/round/round.component.html
@@ -1,7 +1,8 @@
 <div cdkDropListGroup class="container">
     <mat-card class="round">
         <div class="round__header">
-            <h1>Round {{roundNumber}}</h1>
+            <h1 *ngIf="roundNumber === 0">Seeding round</h1>
+            <h1 *ngIf="roundNumber !== 0">Round {{roundNumber}}</h1>
             <div class="round__header-buttons" *ngIf="roundNumber === 0">
                 <button mat-raised-button (click)="revert()" *ngIf="!oneHeatStarted">Revert</button>
                 <button mat-raised-button color="primary" *ngIf="!oneHeatStarted" (click)="automaticallyAssignRiders()">
@@ -15,48 +16,50 @@
         <div class="round__container">
             <div class="round__container__element" *ngIf="riders.length">
                 <h2>Unassigned riders</h2>
-                <hr>
-                <div cdkDropList [cdkDropListData]="riders" class="round__riders"
-                     (cdkDropListDropped)="drop($event)" id="unassignedRiders">
-                    <div class="round__riders__single-rider" *ngFor="let rider of riders" cdkDrag>
-                        <rs-rider-result [riderId]="rider" resultType="default"></rs-rider-result>
+                <div class="round__container__element__scrollable">
+                    <div cdkDropList [cdkDropListData]="riders" class="round__riders"
+                         (cdkDropListDropped)="drop($event)" id="unassignedRiders">
+                        <div class="round__riders__single-rider" *ngFor="let rider of riders" cdkDrag>
+                            <rs-rider-result [riderId]="rider" resultType="default"></rs-rider-result>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="round__container__element">
                 <h2>Heats</h2>
-                <hr>
-                <div *ngFor="let heat of heats; let heatIndex = index" class="round__heat">
-                    <div class="round__heat__header">
-                        <div class="round__heat__header-title">Heat {{heat.id}}</div>
-                        <button mat-raised-button color="primary"
-                                *ngIf="heat.riders.length > 2 && !heat.hasStarted && !heat.hasStopped"
-                                (click)="startHeat(heatIndex)">Start Heat
-                        </button>
-                        <button mat-raised-button color="primary"
-                                *ngIf="heat.hasStarted && !heat.hasStopped"
-                                (click)="stopHeat(heatIndex)">End Heat
-                        </button>
-                        <button mat-raised-button color="primary"
-                                *ngIf="heat.hasStopped && heat.hasAllResults"
-                                (click)="saveHeat(heatIndex)" [disabled]="heatsFinished[heatIndex]">Save Heat
-                        </button>
-                        <div class="round__heat__header-counter">{{ heat.riders.length }} / {{ heatSize }}</div>
-                    </div>
-
-                    <div cdkDropList [cdkDropListData]="heat.riders" class="round__riders"
-                         (cdkDropListDropped)="drop($event)">
-                        <div class="round__riders__single-rider" *ngFor="let rider of heat.riders; let riderIndex = index"
-                             cdkDrag>
-                            <rs-rider-result [riderId]="rider"
-                                             [resultType]="getHeatStatus(heat)"
-                                             [riderColorIndex]=riderIndex
-                                             [disableInput]="heatsFinished[heatIndex]"
-                                             (resultEntry)="onResultEntry($event)"
-                            ></rs-rider-result>
+                <div class="round__container__element__scrollable">
+                    <div *ngFor="let heat of heats; let heatIndex = index" class="round__heat">
+                        <div class="round__heat__header">
+                            <div class="round__heat__header-title">Heat {{heat.id + 1}}</div>
+                            <button mat-raised-button color="primary"
+                                    *ngIf="heat.riders.length > 2 && !heat.hasStarted && !heat.hasStopped"
+                                    (click)="startHeat(heatIndex)">Start Heat
+                            </button>
+                            <button mat-raised-button color="primary"
+                                    *ngIf="heat.hasStarted && !heat.hasStopped"
+                                    (click)="stopHeat(heatIndex)">End Heat
+                            </button>
+                            <button mat-raised-button color="primary"
+                                    *ngIf="heat.hasStopped && heat.hasAllResults"
+                                    (click)="saveHeat(heatIndex)" [disabled]="heatsFinished[heatIndex]">Save Heat
+                            </button>
+                            <div class="round__heat__header-counter">{{ heat.riders.length }} / {{ heatSize }}</div>
                         </div>
-                        <div class="round__riders__single-rider--placeholder" *ngIf="!heat.riders.length">
-                            Drop riders here
+
+                        <div cdkDropList [cdkDropListData]="heat.riders" class="round__riders"
+                             (cdkDropListDropped)="drop($event)">
+                            <div class="round__riders__single-rider" *ngFor="let rider of heat.riders; let riderIndex = index"
+                                 cdkDrag>
+                                <rs-rider-result [riderId]="rider"
+                                                 [resultType]="getHeatStatus(heat)"
+                                                 [riderColorIndex]=riderIndex
+                                                 [disableInput]="heatsFinished[heatIndex]"
+                                                 (resultEntry)="onResultEntry($event)"
+                                ></rs-rider-result>
+                            </div>
+                            <div class="round__riders__single-rider--placeholder" *ngIf="!heat.riders.length">
+                                Drop riders here
+                            </div>
                         </div>
                     </div>
                 </div>
