--- a/src/app/surf-event/surf-event/competition/round/round.component.html
+++ b/src/app/surf-event/surf-event/competition/round/round.component.html
@@ -32,7 +32,7 @@
                         <div class="round__heat__header">
                             <div class="round__heat__header-title">Heat {{heat.id + 1}}</div>
                             <button mat-raised-button color="primary"
-                                    *ngIf="heat.riders.length > 2 && !heat.hasStarted && !heat.hasStopped"
+                                    *ngIf="!riders.length && !heat.hasStarted && !heat.hasStopped"
                                     (click)="startHeat(heatIndex)">Start Heat
                             </button>
                             <button mat-raised-button color="primary"
@@ -40,7 +40,7 @@
                                     (click)="stopHeat(heatIndex)">End Heat
                             </button>
                             <button mat-raised-button color="primary"
-                                    *ngIf="heat.hasStopped && heat.hasAllResults"
+                                    *ngIf="heat.hasStopped && heat.hasAllResults "
                                     (click)="saveHeat(heatIndex)" [disabled]="heatsFinished[heatIndex]">Save Heat
                             </button>
                             <div class="round__heat__header-counter">{{ heat.riders.length }} / {{ heatSize }}</div>
@@ -49,7 +49,7 @@
                         <div cdkDropList [cdkDropListData]="heat.riders" class="round__riders"
                              (cdkDropListDropped)="drop($event)">
                             <div class="round__riders__single-rider" *ngFor="let rider of heat.riders; let riderIndex = index"
-                                 cdkDrag>
+                                 cdkDrag [cdkDragLockAxis]="heat.hasStarted ? 'x' : 'y'">
                                 <rs-rider-result [riderId]="rider"
                                                  [resultType]="getHeatStatus(heat)"
                                                  [riderColorIndex]=riderIndex
