--- a/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.scss
+++ b/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.scss
@@ -49,7 +49,7 @@
     }
 
     &__input {
-        width: 40px;
+        width: 60px;
         height: 40px;
         border: none;
         border-bottom: 1px solid $color-primary;
@@ -78,4 +78,8 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type=number] {
     -moz-appearance: textfield;
+}
+
+.invalid {
+    border: 1px solid #f44336;
 }
