--- a/src/app/surf-event/surf-event/competition/round/round.component.scss
+++ b/src/app/surf-event/surf-event/competition/round/round.component.scss
@@ -4,7 +4,6 @@
 
 .container {
     padding: 0.5rem;
-    min-width: 25vw;
 
     @include respond(small) {
         min-width: auto;
@@ -18,14 +17,21 @@
     width: 100%;
 
     &__header {
+        display: flex;
         padding: 0.5rem;
         width: 100%;
-        text-align: center;
+
+        & h1 {
+            flex: 1;
+        }
 
         &-buttons {
             display: flex;
-            justify-content: space-evenly;
-            margin-top: 1rem;
+            flex: 1;
+
+            & > * {
+                margin-right: 1rem;
+            }
 
             @include respond(small) {
                 flex-direction: column;
@@ -63,12 +69,12 @@
                 color: $color-primary;
             }
 
-            &__scrollable {
-                border-top: 1px solid $color-grey-dark;
-                height: calc(100vh - 350px);
-                overflow: auto;
-                padding-top: 0.5rem;
-                width: 100%;
+            &--30 {
+                flex: 30%;
+            }
+
+            &--70 {
+                flex: 70%;
             }
         }
     }
@@ -76,6 +82,11 @@
     &__heat {
         margin: .5rem;
         border: 1px solid $color-primary;
+
+        &__container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+        }
 
         &__header {
             display: flex;
