--- a/src/app/core/header/navigation/navigation.component.scss
+++ b/src/app/core/header/navigation/navigation.component.scss
@@ -29,7 +29,7 @@
 
     &__background {
         height: 1px;
-        width: 100vw;
+        width: 100%;
         position: absolute;
         top: 0;
         left: 0;
