--- a/src/app/surf-event/surf-event/competition/round/round.component.html
+++ b/src/app/surf-event/surf-event/competition/round/round.component.html
@@ -8,7 +8,8 @@
                     Assign Riders Randomly
                 </button>
                 <button mat-raised-button (click)="revert()" *ngIf="!oneHeatStarted">Revert</button>
-                <button mat-raised-button color="primary" *ngIf="checkAllHeatsFinished()" (click)="moveToNextRound(roundNumber)">
+                <button mat-raised-button color="primary" *ngIf="checkAllHeatsFinished()"
+                        (click)="moveToNextRound(roundNumber)">
                     Move to next round
                 </button>
             </div>
@@ -26,40 +27,19 @@
             <div class="round__container__element round__container__element--70">
                 <h2>Heats</h2>
                 <div class="round__heat__container">
-                    <div *ngFor="let heat of heats; let heatIndex = index" class="round__heat">
-                        <div class="round__heat__header">
-                            <div class="round__heat__header-title">Heat {{heat.id + 1}}</div>
-                            <button mat-raised-button color="primary"
-                                    *ngIf="!unassignedRiders.length && !heat.hasStarted && !heat.hasStopped"
-                                    (click)="startHeat(heatIndex)">Start Heat
-                            </button>
-                            <button mat-raised-button color="primary"
-                                    *ngIf="heat.hasStarted && !heat.hasStopped"
-                                    (click)="stopHeat(heatIndex)">End Heat
-                            </button>
-                            <button mat-raised-button color="primary"
-                                    *ngIf="heat.hasStopped && heat.hasAllResults "
-                                    (click)="saveHeat(heatIndex)" [disabled]="heatsFinished[heatIndex]">Save Heat
-                            </button>
-                            <div class="round__heat__header-counter">{{ heat.riders.length }} / {{ heatSize }}</div>
-                        </div>
+                    <rs-heat *ngFor="let heat of heats; let heatIndex = index"
+                             [heatNumber]="heatIndex"
+                             [hasUnassignedRiders]="unassignedRiders.length > 0"
+                             [hasStarted]="heats[heatIndex].hasStarted"
+                             [hasStopped]="heats[heatIndex].hasStopped"
+                             [hasAllResults]="heats[heatIndex].hasAllResults"
+                             [status]="'assigned'"
+                             [isSaved]="false"
+                             [riders]="heats[heatIndex].riders"
+                             class="round__heat"
+                    >
+                    </rs-heat>
 
-                        <div cdkDropList [cdkDropListData]="heat.riders" class="round__riders"
-                             (cdkDropListDropped)="drop($event)">
-                            <div class="round__riders__single-rider" *ngFor="let rider of heat.riders; let riderIndex = index"
-                                 cdkDrag [cdkDragDisabled]="heat.hasStarted">
-                                <rs-rider-result [riderId]="rider"
-                                                 [resultType]="getHeatStatus(heat)"
-                                                 [riderColorIndex]=riderIndex
-                                                 [disableInput]="heatsFinished[heatIndex]"
-                                                 (resultEntry)="onResultEntry($event)"
-                                ></rs-rider-result>
-                            </div>
-                            <div class="round__riders__single-rider--placeholder" *ngIf="!heat.riders.length">
-                                Drop riders here
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
