--- a/src/app/surf-event/surf-event/competition/round/round.component.html
+++ b/src/app/surf-event/surf-event/competition/round/round.component.html
@@ -36,6 +36,8 @@
                              [status]="'assigned'"
                              [isSaved]="false"
                              [riders]="heats[heatIndex].riders"
+                             (drop)="drop($event)"
+                             (statusChange)="handleStatusChange($event)"
                              class="round__heat"
                     >
                     </rs-heat>
