--- a/src/app/surf-event/surf-event/competition/round/heat/heat.component.html
+++ b/src/app/surf-event/surf-event/competition/round/heat/heat.component.html
@@ -1,3 +1,4 @@
+<form [formGroup]="heatForm">
 <div class="round__heat__header">
     <div class="round__heat__header-title">Heat {{heatNumber + 1}}</div>
     <button mat-raised-button color="primary"
@@ -16,7 +17,7 @@
 </div>
 
 <div cdkDropList [cdkDropListData]="riders" class="round__riders"
-     (cdkDropListDropped)="drop($event)">
+     (cdkDropListDropped)="onDrop($event)">
     <div class="round__riders__single-rider" *ngFor="let rider of riders; let riderIndex = index"
          cdkDrag [cdkDragDisabled]="hasStarted">
         <rs-rider-result [riderId]="rider"
@@ -29,3 +30,4 @@
         Drop riders here
     </div>
 </div>
+</form>
